Fix center align of photo

--- a/src/app/pages/status/status.page.scss
+++ b/src/app/pages/status/status.page.scss
@@ -35,9 +35,14 @@
         color: white;
         text-align: center;
         width: 40px;;
-        display:table-cell;
+        display: table-cell;
         vertical-align: middle;
         cursor: pointer;
+    }
+
+    .icon-placeholder {
+        width: 40px;;
+        display: table-cell;
     }
 
     .custom-gallery {
